--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
 		<link rel="icon" href="favicon.ico" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<meta name="theme-color" content="#ff6ad5" />
-		<title>Luke's Blog</title>
+		<title>Unveiling the Arcane</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
+		<div id="modal-root"></div>
 		<script src="/static/bundle.js"></script>
 	</body>
 </html>
